[tool.poetry]
name = "musicpi"
version = "0.1.0"
description = "Volumio music server status, start, and stop playback."
authors = ["CrustyBarnacle <CrustyBarnacle@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
